[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/godot-openxr/config/OpenXRPose.gdns" type="Script" id=1]
[ext_resource path="res://OpenXRallhandsdata.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-openxr/config/OpenXRSkeleton.gdns" type="Script" id=3]

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.005
bottom_radius = 0.005
height = 0.06
radial_segments = 12
rings = 0

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.005
bottom_radius = 0.005
height = 0.08
radial_segments = 12
rings = 0

[sub_resource type="CylinderMesh" id=3]
top_radius = 0.007
bottom_radius = 0.008
height = 0.04
radial_segments = 12
rings = 0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.839216, 0.247059, 0.968627, 1 )

[node name="OpenXRallhandsdata" type="Spatial"]
script = ExtResource( 2 )

[node name="LeftHandSkelPose" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="LeftHandBlankSkeleton" type="Skeleton" parent="LeftHandSkelPose"]
script = ExtResource( 3 )

[node name="RightHandSkelPose" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="RightHandBlankSkeleton" type="Skeleton" parent="RightHandSkelPose"]
script = ExtResource( 3 )

[node name="LeftHandAimPose" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="LeftHandAimPose"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )

[node name="RightHandAimPose" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="RightHandAimPose"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )

[node name="LeftHandGripPose" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="LeftHandGripPose"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )
